Fixed drag handle visiblity, added sass encapsulation, CHANGED plugin name to confirm to package naming

--- a/src/grid/plugin/Lockable.scss
+++ b/src/grid/plugin/Lockable.scss
@@ -6,35 +6,45 @@
 // TODO:
 // NEED TO ALSO ACCOUNT FOR HOVERED STYLING
 
-.x-headercontainer .x-gridcolumn.x-locked,
-.x-grid-filterbar .x-locked,
-.x-gridcell.x-locked {
-    z-index: 10;  // Mask is z-index 10
-}
+.x-css-locked-grid {
 
-.x-headercontainer .x-gridcolumn.x-locked,
-.x-grid-filterbar .x-locked,
-.x-gridcell.x-locked:not(.x-selected) {
-    background-color: var(--background-color);
-}
+    .x-headercontainer .x-gridcolumn.x-locked,
+    .x-grid-filterbar .x-locked,
 
-/*
- * Set background colour for selected locked cells as they are
- * normally transparent and need to have the select colour manually
- * applied.
- *
- * NOTE: This needs to be updated for various themes.
- */
+    .x-gridcell.x-locked {
+        z-index: 10;  // Mask is z-index 10
+    }
 
-.x-gridrow.x-selected .x-gridcell,
-.x-gridcell.x-locked.x-selected {
-    background-color: var(--selected-background-color);
-}
+    .x-headercontainer .x-gridcolumn.x-locked,
+    .x-grid-filterbar .x-locked,
+    .x-gridcell.x-locked:not(.x-selected) {
+        background-color: var(--background-color);
+    }
 
-/**
- * extender-drag-handle
- */
-.x-selmodel-extender-drag-handle {
-    z-index: 12;
-    background-color: green;
+    /*
+     * Set background colour for selected locked cells as they are
+     * normally transparent and need to have the select colour manually
+     * applied.
+     *
+     * NOTE: This needs to be updated for various themes.
+     */
+
+    .x-gridrow.x-selected .x-gridcell,
+    .x-gridcell.x-locked.x-selected {
+        background-color: var(--selected-background-color);
+    }
+
+    /**
+     * Cell editing adjustment
+     */
+    .x-celleditor {
+        z-index: 9 !important;
+    }
+
+    /**
+     * extender-drag-handle
+     */
+    .x-selmodel-extender-drag-handle {
+        background-color: green;
+    }
 }
